fix: ensure error box aligns with other items

--- a/app/assets/stylesheets/errors.scss
+++ b/app/assets/stylesheets/errors.scss
@@ -1,5 +1,6 @@
 div.errors {
   border: 1px solid #900;
+  box-sizing: border-box;
 
   color: #900;
   background: #fcc;
